--- a/COS30045/COS30045 1.1P/HTML Starter Template.html
+++ b/COS30045/COS30045 1.1P/HTML Starter Template.html
@@ -7,7 +7,11 @@
 	<meta name="keywords"		  content="HTML, CSS"/>
 	<meta name="author"			  content="Your name here"/>
 
+	<link rel="stylesheet" href="style1.1.css">
+
 	<title>Task 1.1 HTML and CSS Demo Page</title>
+
+	
 
 	<style>
 		/* Body styling */
@@ -106,6 +110,12 @@
 </head>
 
 <body>
+	<div class="button-container">
+        <a href="../MainPage.html" class="button-64" role="button"><span class="text">Main</span></a>
+        <a href="../COS30045 1.1P/HTML Starter Template.html" class="button-64" role="button"><span class="text">Lab 1.1</span></a>
+        <a href="../COS30045 1.2P/HTML Starter Template.html" class="button-64" role="button"><span class="text">Lab 1.2</span></a>
+        <a href="../COS30045 1.3P/HTML Starter Template 1.3.html" class="button-64" role="button"><span class="text">Lab 1.3</span></a>
+    </div>
 
 	<div class="container">
 		<h1>Pets and the Pandemic</h1>
