--- a/COS30045/COS30045 2.1P/Lab2-1.html
+++ b/COS30045/COS30045 2.1P/Lab2-1.html
@@ -11,10 +11,19 @@
 	<!--Insert description of exercise  -->
 	<script src="http://d3js.org/d3.v7.min.js"></script>
 
+	<link rel="stylesheet" href="style2.1.css">
+
 
 </head>
 
 <body>
+
+	<div class="button-container">
+        <a href="../MainPage.html" class="button-64" role="button"><span class="text">Main</span></a>
+        <a href="../COS30045 2.1P/Lab2-1.html" class="button-64" role="button"><span class="text">Lab 2.1</span></a>
+        <a href="../COS30045 2.2P/Lab2-2.html" class="button-64" role="button"><span class="text">Lab 2.2</span></a>
+        <a href="../COS30045 2.3P/Lab2-3.html" class="button-64" role="button"><span class="text">Lab 2.3</span></a>
+    </div>
 
 	<h1>The D3 Journey starts here...</h1>
 	
