--- a/COS30045/COS30045 2.3P/Lab2-3.html
+++ b/COS30045/COS30045 2.3P/Lab2-3.html
@@ -7,7 +7,7 @@
 	<meta name="keywords"		  content="HTML, CSS"/>
 	<meta name="author"			  content="Your name here"/>
 
-	<title>Task 2.1 D3 Data Binding</title>
+	<title>Task 2.3</title>
 	<!--Insert description of exercise  -->
 	<script src="http://d3js.org/d3.v7.min.js"></script>
 
@@ -17,12 +17,12 @@
 <body>
 
     <div class="button-container">
-        <a href="../MainPage.html" class="button-64" role="button"><span class="text">Main</span></a>
+        <a href="../index.html" class="button-64" role="button"><span class="text">Main</span></a>
         <a href="../COS30045 2.1P/Lab2-1.html" class="button-64" role="button"><span class="text">Lab 2.1</span></a>
         <a href="../COS30045 2.2P/Lab2-2.html" class="button-64" role="button"><span class="text">Lab 2.2</span></a>
         <a href="../COS30045 2.3P/Lab2-3.html" class="button-64" role="button"><span class="text">Lab 2.3</span></a>
+        <a href="../COS30045 2.4P/Lab2-4.html" class="button-64" role="button"><span class="text">Lab 2.4</span></a>
     </div>
-
 
 	<h1>Drawing with Data</h1>
     <h2>Author: See Zhi Qian</h2>
