--- a/COS30045/index.html
+++ b/COS30045/index.html
@@ -35,9 +35,9 @@
             <h2>LAB 3</h2>
             <div class="buttons">
                 <a href="COS30045 3.1P/Lab3-1.html" class="circle">3.1</a>
-                <a href="COS30045 3.2P/#" class="circle">3.2</a>
-                <a href="#" class="circle">3.3</a>
-                <a href="#" class="circle">3.4</a>
+                <a href="COS30045 3.2P/Lab3-2.html" class="circle">3.2</a>
+                <a href="#" class="circle"></a>
+                <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
             </div>
@@ -45,10 +45,10 @@
         <div class="lab">
             <h2>LAB 4</h2>
             <div class="buttons">
-                <a href="lab4_1.html" class="circle">4.1</a>
-                <a href="lab4_2.html" class="circle">4.2</a>
-                <a href="lab4_3.html" class="circle">4.3</a>
-                <a href="lab4_4.html" class="circle">4.4</a>
+                <a href="COS30045 4.1P/COS30045 4.1 Design Studio.pdf" class="circle">4.1</a>
+                <a href="lab4_2.html" class="circle"></a>
+                <a href="lab4_3.html" class="circle"></a>
+                <a href="lab4_4.html" class="circle"></a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
             </div>
