--- a/COS30045/COS30045 1.2P/HTML Starter Template.html
+++ b/COS30045/COS30045 1.2P/HTML Starter Template.html
@@ -9,7 +9,7 @@
 
 	<link rel="stylesheet" href="style1.2.css">
 
-	<title>Task 1.1 HTML and CSS Demo Page</title>
+	<title>Task 1.2</title>
 
 
 
@@ -99,7 +99,7 @@
 <body>
 
 	<div class="button-container">
-        <a href="../MainPage.html" class="button-64" role="button"><span class="text">Main</span></a>
+        <a href="../index.html" class="button-64" role="button"><span class="text">Main</span></a>
         <a href="../COS30045 1.1P/HTML Starter Template.html" class="button-64" role="button"><span class="text">Lab 1.1</span></a>
         <a href="../COS30045 1.2P/HTML Starter Template.html" class="button-64" role="button"><span class="text">Lab 1.2</span></a>
         <a href="../COS30045 1.3P/HTML Starter Template 1.3.html" class="button-64" role="button"><span class="text">Lab 1.3</span></a>
