--- a/COS30045/COS30045 1.3P/HTML Starter Template 1.3.html
+++ b/COS30045/COS30045 1.3P/HTML Starter Template 1.3.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVG Shapes Example</title>
+    <title>Task 1.3</title>
 
     <link rel="stylesheet" href="style1.3.css">
 </head>
 <body>
 
     <div class="button-container">
-        <a href="../MainPage.html" class="button-64" role="button"><span class="text">Main</span></a>
+        <a href="../index.html" class="button-64" role="button"><span class="text">Main</span></a>
         <a href="../COS30045 1.1P/HTML Starter Template.html" class="button-64" role="button"><span class="text">Lab 1.1</span></a>
         <a href="../COS30045 1.2P/HTML Starter Template.html" class="button-64" role="button"><span class="text">Lab 1.2</span></a>
         <a href="../COS30045 1.3P/HTML Starter Template 1.3.html" class="button-64" role="button"><span class="text">Lab 1.3</span></a>
