--- a/COS30045/COS30045 2.1P/Lab2-1.html
+++ b/COS30045/COS30045 2.1P/Lab2-1.html
@@ -19,10 +19,11 @@
 <body>
 
 	<div class="button-container">
-        <a href="../MainPage.html" class="button-64" role="button"><span class="text">Main</span></a>
+        <a href="../index.html" class="button-64" role="button"><span class="text">Main</span></a>
         <a href="../COS30045 2.1P/Lab2-1.html" class="button-64" role="button"><span class="text">Lab 2.1</span></a>
         <a href="../COS30045 2.2P/Lab2-2.html" class="button-64" role="button"><span class="text">Lab 2.2</span></a>
         <a href="../COS30045 2.3P/Lab2-3.html" class="button-64" role="button"><span class="text">Lab 2.3</span></a>
+        <a href="../COS30045 2.4P/Lab2-4.html" class="button-64" role="button"><span class="text">Lab 2.4</span></a>
     </div>
 
 	<h1>The D3 Journey starts here...</h1>
