--- a/COS30045/COS30045 3.2P/3.2 demo.html
+++ b/COS30045/COS30045 3.2P/3.2 demo.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8"/>
     <meta name="description" content="Data Visualisation"/>
     <meta name="keywords" content="HTML, CSS"/>
     <meta name="author" content="See Zhi Qian"/>
 
-    <title>Task 3.1</title>
-    <!-- Insert description of exercise -->
+    <title>Task 3.2</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-
-    <link rel="stylesheet" href="style3.1.css">
+    <link rel="stylesheet" href="style3.2.css">
 </head>
 <body>
 
@@ -24,19 +21,18 @@
     <h1>Drawing with Data</h1>
     <h2>Author: See Zhi Qian</h2>
 
-    <!-- Add a div to hold the SVG element -->
     <div id="chart"></div>
 
     <script>
         var dataset = [
-            [5, 20, 5], [500, 90, 5], [250, 50, 10],
-            [100, 33, 5], [330, 95, 6], [410, 12, 3],
-            [475, 44, 10], [25, 67, 5], [85, 21, 5],
-            [220, 88, 10]
+            [2, 8, 5], [3, 5, 5], [5, 17, 10],
+            [6, 6, 5], [6, 12, 6], [7, 20, 3],
+            [8, 22, 10], [10, 11, 5], [5, 12, 5],
+            [6, 16, 10]
         ];
 
         var w = 800;
-        var h = 160;
+        var h = 300;
         var padding = 30;
 
         var xScale = d3.scaleLinear()
@@ -54,7 +50,11 @@
                     .attr("width", w)
                     .attr("height", h);
 
-        svg.selectAll("circle")
+        // Move the entire chart 50px to the right
+        var chartGroup = svg.append("g")
+                            .attr("transform", "translate(50, 0)");
+
+        chartGroup.selectAll("circle")
             .data(dataset)
             .enter()
             .append("circle")
@@ -63,7 +63,7 @@
             .attr("r", function(d) { return d[2]; })
             .attr("fill", function(d) { return d[0] === 500 ? "red" : "rgb(49, 145, 0)"; });
 
-        svg.selectAll("text")
+        chartGroup.selectAll("text")
             .data(dataset)
             .enter()
             .append("text")
@@ -72,9 +72,40 @@
             .attr("y", function(d) { return yScale(d[1]) - 1; })
             .attr("fill", "green");
 
+        // Add X-axis
+        var xAxis = d3.axisBottom(xScale)
+        .ticks(5);
+        chartGroup.append("g")
+           .attr("transform", "translate(0," + (h - padding) + ")")
+           .call(xAxis);
+
+        // Add Y-axis
+        var yAxis = d3.axisLeft(yScale)
+        .ticks(5);
+        chartGroup.append("g")
+           .attr("transform", "translate(" + padding + ",0)")
+           .call(yAxis);
+
+        // Add X-axis label
+        chartGroup.append("text")
+           .attr("x", w / 2)
+           .attr("y", h - 5)
+           .attr("text-anchor", "middle")
+           .text("Tree Age (year)")
+           .attr("font-family", "sans-serif")
+           .attr("font-size", "12px");
+
+        // Add Y-axis label
+        chartGroup.append("text")
+           .attr("transform", "rotate(-90)")
+           .attr("x", -h / 2)
+           .attr("y", padding - 25)
+           .attr("text-anchor", "middle")
+           .text("Tree Height (m)")
+           .attr("font-family", "sans-serif")
+           .attr("font-size", "12px");
     </script>
 
-    <br>
     <footer>COS30045 Data Visualisation<br>
         Joe Bloggs</footer>
 
