--- a/COS30045/COS30045 3.2P/Lab3-2-ori.html
+++ b/COS30045/COS30045 3.2P/Lab3-2-ori.html
@@ -25,10 +25,10 @@
 
     <script>
         var dataset = [
-            [2, 8, 5], [3, 5, 5], [5, 17, 10],
-            [6, 6, 5], [6, 12, 6], [7, 20, 3],
-            [8, 22, 10], [10, 11, 5], [5, 12, 5],
-            [6, 16, 10]
+            [5, 20, 5], [500, 90, 5], [250, 50, 10],
+            [100, 33, 5], [330, 95, 6], [410, 12, 3],
+            [475, 44, 10], [25, 67, 5], [85, 21, 5],
+            [220, 88, 10]
         ];
 
         var w = 800;
@@ -50,11 +50,7 @@
                     .attr("width", w)
                     .attr("height", h);
 
-        // Move the entire chart 50px to the right
-        var chartGroup = svg.append("g")
-                            .attr("transform", "translate(50, 0)");
-
-        chartGroup.selectAll("circle")
+        svg.selectAll("circle")
             .data(dataset)
             .enter()
             .append("circle")
@@ -63,7 +59,7 @@
             .attr("r", function(d) { return d[2]; })
             .attr("fill", function(d) { return d[0] === 500 ? "red" : "rgb(49, 145, 0)"; });
 
-        chartGroup.selectAll("text")
+        svg.selectAll("text")
             .data(dataset)
             .enter()
             .append("text")
@@ -75,35 +71,16 @@
         // Add X-axis
         var xAxis = d3.axisBottom(xScale)
         .ticks(5);
-        chartGroup.append("g")
+        svg.append("g")
            .attr("transform", "translate(0," + (h - padding) + ")")
            .call(xAxis);
 
         // Add Y-axis
         var yAxis = d3.axisLeft(yScale)
         .ticks(5);
-        chartGroup.append("g")
+        svg.append("g")
            .attr("transform", "translate(" + padding + ",0)")
            .call(yAxis);
-
-        // Add X-axis label
-        chartGroup.append("text")
-           .attr("x", w / 2)
-           .attr("y", h - 5)
-           .attr("text-anchor", "middle")
-           .text("Tree Age (year)")
-           .attr("font-family", "sans-serif")
-           .attr("font-size", "12px");
-
-        // Add Y-axis label
-        chartGroup.append("text")
-           .attr("transform", "rotate(-90)")
-           .attr("x", -h / 2)
-           .attr("y", padding - 25)
-           .attr("text-anchor", "middle")
-           .text("Tree Height (m)")
-           .attr("font-family", "sans-serif")
-           .attr("font-size", "12px");
     </script>
 
     <footer>COS30045 Data Visualisation<br>
