--- a/COS30045/COS30045_2.4P/Lab2-4.html
+++ b/COS30045/COS30045_2.4P/Lab2-4.html
@@ -18,11 +18,12 @@
 
 	<div class="button-container">
         <a href="../index.html" class="button-64" role="button"><span class="text">Main</span></a>
-        <a href="../COS30045 2.1P/Lab2-1.html" class="button-64" role="button"><span class="text">Lab 2.1</span></a>
-        <a href="../COS30045 2.2P/Lab2-2.html" class="button-64" role="button"><span class="text">Lab 2.2</span></a>
-        <a href="../COS30045 2.3P/Lab2-3.html" class="button-64" role="button"><span class="text">Lab 2.3</span></a>
-        <a href="../COS30045 2.4P/Lab2-4.html" class="button-64" role="button"><span class="text">Lab 2.4</span></a>
+        <a href="../COS30045_2.1P/Lab2-1.html" class="button-64" role="button"><span class="text">Lab 2.1</span></a>
+        <a href="../COS30045_2.2P/Lab2-2.html" class="button-64" role="button"><span class="text">Lab 2.2</span></a>
+        <a href="../COS30045_2.3P/Lab2-3.html" class="button-64" role="button"><span class="text">Lab 2.3</span></a>
+        <a href="../COS30045_2.4P/Lab2-4.html" class="button-64" role="button"><span class="text">Lab 2.4</span></a>
     </div>
+
 
 	<h1>Drawing with Data</h1>
     <h2>Author: See Zhi Qian</h2>
