--- a/COS30045/COS30045_1.1P/HTML Starter Template.html
+++ b/COS30045/COS30045_1.1P/HTML Starter Template.html
@@ -112,9 +112,9 @@
 <body>
 	<div class="button-container">
         <a href="../index.html" class="button-64" role="button"><span class="text">Main</span></a>
-        <a href="../COS30045 1.1P/HTML Starter Template.html" class="button-64" role="button"><span class="text">Lab 1.1</span></a>
-        <a href="../COS30045 1.2P/HTML Starter Template.html" class="button-64" role="button"><span class="text">Lab 1.2</span></a>
-        <a href="../COS30045 1.3P/HTML Starter Template 1.3.html" class="button-64" role="button"><span class="text">Lab 1.3</span></a>
+        <a href="../COS30045_1.1P/HTML Starter Template.html" class="button-64" role="button"><span class="text">Lab 1.1</span></a>
+        <a href="../COS30045_1.2P/HTML Starter Template.html" class="button-64" role="button"><span class="text">Lab 1.2</span></a>
+        <a href="../COS30045_1.3P/HTML Starter Template 1.3.html" class="button-64" role="button"><span class="text">Lab 1.3</span></a>
     </div>
 
 	<div class="container">
