--- a/COS30045/COS30045_4.1P/Lab4-1.html
+++ b/COS30045/COS30045_4.1P/Lab4-1.html
@@ -9,7 +9,7 @@
     <div class="button-container">
         <a href="../index.html" class="button-64" role="button"><span class="text">Main</span></a>
         <!-- Link to open the Word document -->
-        <a href="../COS30045 4.1P/COS30045 4.1 Design Studio.pdf" class="button-64" role="button"><span class="text">Open Design Studio Document</span></a>
+        <a href="../COS30045_4.1P/COS30045 4.1 Design Studio.pdf" class="button-64" role="button"><span class="text">Open Design Studio Document</span></a>
     </div>
 </body>
 </html>
