--- a/COS30045/index.html
+++ b/COS30045/index.html
@@ -12,9 +12,9 @@
         <div class="lab">
             <h2>LAB 1</h2>
             <div class="buttons">
-                <a href="COS30045 1.1P/HTML Starter Template.html" class="circle">1.1</a>
-                <a href="COS30045 1.2P/HTML Starter Template.html" class="circle">1.2</a>
-                <a href="COS30045 1.3P/HTML Starter Template 1.3.html" class="circle">1.3</a>
+                <a href="COS30045_1.1P/HTML Starter Template.html" class="circle">1.1</a>
+                <a href="COS30045_1.2P/HTML Starter Template.html" class="circle">1.2</a>
+                <a href="COS30045_1.3P/HTML Starter Template 1.3.html" class="circle">1.3</a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
@@ -23,10 +23,10 @@
         <div class="lab">
             <h2>LAB 2</h2>
             <div class="buttons">
-                <a href="COS30045 2.1P/Lab2-1.html" class="circle">2.1</a>
-                <a href="COS30045 2.2P/Lab2-2.html" class="circle">2.2</a>
-                <a href="COS30045 2.3P/Lab2-3.html" class="circle">2.3</a>
-                <a href="COS30045 2.4P/Lab2-4.html" class="circle">2.4</a>
+                <a href="COS30045_2.1P/Lab2-1.html" class="circle">2.1</a>
+                <a href="COS30045_2.2P/Lab2-2.html" class="circle">2.2</a>
+                <a href="COS30045_2.3P/Lab2-3.html" class="circle">2.3</a>
+                <a href="COS30045_2.4P/Lab2-4.html" class="circle">2.4</a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
             </div>
@@ -34,8 +34,8 @@
         <div class="lab">
             <h2>LAB 3</h2>
             <div class="buttons">
-                <a href="COS30045 3.1P/Lab3-1.html" class="circle">3.1</a>
-                <a href="COS30045 3.2P/Lab3-2.html" class="circle">3.2</a>
+                <a href="COS30045_3.1P/Lab3-1.html" class="circle">3.1</a>
+                <a href="COS30045_3.2P/Lab3-2.html" class="circle">3.2</a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
@@ -45,7 +45,7 @@
         <div class="lab">
             <h2>LAB 4</h2>
             <div class="buttons">
-                <a href="COS30045 4.1P/COS30045 4.1 Design Studio.pdf" class="circle">4.1</a>
+                <a href="COS30045_4.1P/COS30045 4.1 Design Studio.pdf" class="circle">4.1</a>
                 <a href="lab4_2.html" class="circle"></a>
                 <a href="lab4_3.html" class="circle"></a>
                 <a href="lab4_4.html" class="circle"></a>
