--- a/COS30045/COS30045_2.2P/Lab2-2.html
+++ b/COS30045/COS30045_2.2P/Lab2-2.html
@@ -9,7 +9,7 @@
 
 	<title>Task 2.2</title>
 	<!--Insert description of exercise  -->
-	<script src="http://d3js.org/d3.v7.min.js"></script>
+	<script src="https://d3js.org/d3.v7.min.js"></script>
 
     <link rel="stylesheet" href="style2.2.css">
 
