--- a/COS30045/COS30045_2.4P/Lab2-4.html
+++ b/COS30045/COS30045_2.4P/Lab2-4.html
@@ -9,7 +9,7 @@
 
 	<title>Task 2.4</title>
 	<!--Insert description of exercise  -->
-	<script src="http://d3js.org/d3.v7.min.js"></script>
+	<script src="https://d3js.org/d3.v7.min.js"></script>
 
 	<link rel="stylesheet" href="style2.4.css">
 
