--- a/COS30045/COS30045_3.2P/Lab3-2-ori.html
+++ b/COS30045/COS30045_3.2P/Lab3-2-ori.html
@@ -15,7 +15,7 @@
     <div class="button-container">
         <a href="../index.html" class="button-64" role="button"><span class="text">Main</span></a>
         <a href="../COS30045_3.1P/Lab3-1.html" class="button-64" role="button"><span class="text">Lab 3.1</span></a>
-        <a href="../COS30045_3.2P/Lab3-2.html" class="button-64" role="button"><span class="text">Lab 3.2</span></a>
+        <a href="../COS30045_3.2P/Lab3-2-ori.html" class="button-64" role="button"><span class="text">Lab 3.2</span></a>
     </div>
 
     <h1>Drawing with Data</h1>
