--- a/COS30045/index.html
+++ b/COS30045/index.html
@@ -35,7 +35,7 @@
             <h2>LAB 3</h2>
             <div class="buttons">
                 <a href="COS30045_3.1P/Lab3-1.html" class="circle">3.1</a>
-                <a href="COS30045_3.2P/Lab3-2.html" class="circle">3.2</a>
+                <a href="COS30045_3.2P/Lab3-2-ori.html" class="circle">3.2</a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
