--- a/COS30045/index.html
+++ b/COS30045/index.html
@@ -35,7 +35,7 @@
             <h2>LAB 3</h2>
             <div class="buttons">
                 <a href="COS30045_3.1P/Lab3-1.html" class="circle">3.1</a>
-                <a href="COS30045_3.2P/Lab3-2-ori.html" class="circle">3.2</a>
+                <a href="COS30045_3.2P/Lab3-2.html" class="circle">3.2</a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
@@ -52,6 +52,26 @@
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle"></a>
             </div>
+        </div>
+        <div class="lab">
+                <h2>LAB 5</h2>
+                <div class="buttons">
+                    <a href="COS30045_5.1P/Lab5-1.html" class="circle">5.1</a>
+                    <a href="COS30045_5.2P/Lab5-2.html" class="circle">5.2</a>
+                    <a href="COS30045_5.3P/Lab5-3.html" class="circle">5.3</a>
+                    <a href="lab4_4.html" class="circle"></a>
+                    <a href="#" class="circle"></a>
+                    <a href="#" class="circle"></a>
+            </div>
+        </div>
+        <div class="lab">
+            <h2>LAB 6</h2>
+            <div class="buttons">
+                <a href="COS30045_6.1P/Lab6-1.html" class="circle">6.1</a>
+                <a href="COS30045_6.2P/Lab6-2.html" class="circle">6.2</a>
+                <a href="#" class="circle"></a>
+                <a href="#" class="circle"></a>
+                <a href="#" class="circle"></a>
         </div>
     </div>
 </body>
