--- a/COS30045/COS30045_6.1P/Lab6-1.html
+++ b/COS30045/COS30045_6.1P/Lab6-1.html
@@ -76,7 +76,7 @@
     <div class="button-container">
         <a href="../index.html" class="button-64" role="button"><span class="text">Main</span></a>
         <a href="../COS30045_6.1P/Lab6-1.html" class="button-64" role="button"><span class="text">Lab 6.1</span></a>
-        <a href="../COS30045_6.2P/" class="button-64" role="button"><span class="text">Lab 6.2</span></a> 
+        <a href="../COS30045_6.2P/Lab6-2.html" class="button-64" role="button"><span class="text">Lab 6.2</span></a> 
     </div>
 
     <h1>Update Data</h1>
