--- a/COS30045/COS30045_6.2P/Lab6-2.html
+++ b/COS30045/COS30045_6.2P/Lab6-2.html
@@ -90,7 +90,7 @@
     <button id="sortButton">Sort Bars</button> <!-- Sort Button with consistent design -->
 
     <script src="Lab6-2.js"></script>
-
+    <div id="rec"></div>
     <footer>COS30045 Data Visualisation<br>See Zhi Qian</footer>
 
 </body>
