--- a/COS30045/COS30045_5.3P/Lab5-3.html
+++ b/COS30045/COS30045_5.3P/Lab5-3.html
@@ -11,7 +11,6 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
     <link rel="stylesheet" href="style5.3.css">
-
     <style>
         /* General Styles */
         body {
@@ -69,6 +68,7 @@
             text-align: center;
         }
     </style>
+    
 </head>
 
 <body>
@@ -84,10 +84,15 @@
     <h2>Author: See Zhi Qian</h2>
 
     <!-- Buttons -->
-    <button id="addButton">Add Bar</button>
-    <button id="removeButton">Remove Bar</button>
+   <!-- Buttons -->
+   <button id="addButton">Add Bar</button>
+    <button id="removeButton">Remove Bar</button> <!-- Update this ID to removeButton -->
+
+
 
     <script src="Lab5-3.js"></script>
+    <div id="rec"></div>
+
 
     <footer>COS30045 Data Visualisation<br>See Zhi Qian</footer>
 
