--- a/COS30045/COS30045_6.1P/Lab6-1.html
+++ b/COS30045/COS30045_6.1P/Lab6-1.html
@@ -87,7 +87,7 @@
     <button id="removeButton">Remove Bar</button>
 
     <script src="Lab6-1.js"></script>
-
+    <div id="rec"></div>
     <footer>COS30045 Data Visualisation<br>See Zhi Qian</footer>
 
 </body>
