--- a/COS30045/index.html
+++ b/COS30045/index.html
@@ -54,6 +54,14 @@
                 <a href="COS30045_6.2P/Lab6-2.html" class="circle">6.2</a>
         </div>
     </div>
+    <div class="lab">
+            <h2>LAB 7</h2>
+            <div class="buttons">
+                <a href="COS30045_7.1P/Lab7-1.html" class="circle">7.1</a>
+                <a href="COS30045_7.2P/Lab7-2.html" class="circle">7.2</a>
+                <a href="COS30045_7.3P/Lab7-3.html" class="circle">7.3</a>
+        </div>
+    </div>
     
 </body>
 </html>
