--- a/COS30045/COS30045_7.3P/Lab7-3.html
+++ b/COS30045/COS30045_7.3P/Lab7-3.html
@@ -20,6 +20,12 @@
         <a href="../COS30045_7.3P/Lab7-3.html" class="button-64" role="button"><span class="text">Lab 7.3</span></a> 
     </div>
 
+    <h1>Update Data</h1>
+    <h2>Author: See Zhi Qian</h2>
+
     <script src="Lab7-3.js"></script>
+
+    <footer>COS30045 Data Visualisation<br>See Zhi Qian</footer>
+    
 </body>
 </html>
