--- a/COS30045/COS30045_7.1P/Lab7-1.html
+++ b/COS30045/COS30045_7.1P/Lab7-1.html
@@ -50,9 +50,14 @@
         <a href="../COS30045_7.2P/Lab7-2.html" class="button-64" role="button"><span class="text">Lab 7.2</span></a> 
         <a href="../COS30045_7.3P/Lab7-3.html" class="button-64" role="button"><span class="text">Lab 7.3</span></a> 
     </div>
+    <h1>Update Data</h1>
+    <h2>Author: See Zhi Qian</h2>
 
     <h1 class="chart-title">Number of Unemployed in Australia</h1>
     <div id="chart"></div>
     <script src="Lab7-1.js"></script>
+
+    <footer>COS30045 Data Visualisation<br>See Zhi Qian</footer>
+    
 </body>
 </html>
