--- a/COS30045/index.html
+++ b/COS30045/index.html
@@ -62,6 +62,13 @@
                 <a href="COS30045_7.3P/Lab7-3.html" class="circle">7.3</a>
         </div>
     </div>
+    <div class="lab">
+        <h2>LAB 8</h2>
+        <div class="buttons">
+            <a href="COS30045_8.1P/Lab8-1.html" class="circle">8.1</a>
+            <a href="COS30045_7.2P/Lab7-2.html" class="circle">8.2</a>
+    </div>
+</div>
     
 </body>
 </html>
